--- a/src/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
+++ b/src/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
@@ -103,6 +103,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AzureSignalR.cs" />
     <Compile Include="DeployClientSettings.cs" />
     <Compile Include="HSLColor.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -155,29 +156,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR">
-      <Version>1.0.1</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client">
-      <Version>1.0.1</Version>
+      <Version>3.0.0-preview3-19153-02</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.5</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Animations">
-      <Version>3.0.0</Version>
+      <Version>5.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
+      <Version>5.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MoleDeploy.Contracts\MoleDeploy.Contracts.csproj">
       <Project>{4e89b6ae-8527-480b-bb25-cbf9e6520378}</Project>
       <Name>MoleDeploy.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MoleDeploy.SignalR\MoleDeploy.SignalR.csproj">
-      <Project>{7185da62-40e1-4110-8dfa-f3c152f78eb4}</Project>
-      <Name>MoleDeploy.SignalR</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
