--- a/src/MoleDeploy.Vsts/MoleDeploy.Vsts.csproj
+++ b/src/MoleDeploy.Vsts/MoleDeploy.Vsts.csproj
@@ -1,18 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
-    <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="16.137.0-preview" />
-    <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="16.137.0-preview" />
-    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.137.0-preview" />
-    <PackageReference Include="Microsoft.VisualStudio.Services.Release.Client" Version="16.137.0-preview" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.26" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SignalRService" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MoleDeploy.Contracts\MoleDeploy.Contracts.csproj" />
-    <ProjectReference Include="..\MoleDeploy.SignalR\MoleDeploy.SignalR.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
