--- a/azure-pipelines.mole-cloud.yml
+++ b/azure-pipelines.mole-cloud.yml
@@ -14,7 +14,8 @@ trigger:
       - azure-pipelines.mole-cloud.yml
 
 variables:
-  image_name: whack-a-mole/mole-cloud:$(Build.BuildNumber)
+  repository: whack-a-mole/mole-cloud
+  tag: $(Build.BuildNumber)
   report_url: https://demo-whack-a-mole-dev-func.azurewebsites.net/api/ReportBuildState
 
 pool:
@@ -22,8 +23,33 @@ pool:
 
 steps:
 - script: |
-    curl -d "{\"State\": 1, \"Message\": \"Initializing Azure CLI Connection\", \"ServiceName\": \"mtcden\"}" -X POST $(report_url)
+    curl -d "{\"State\": 1, \"Message\": \"Initializing Azure CLI Connection\", \"ServiceName\": \"$(service_name)\"}" -X POST $(report_url)
 
+# Update node count in helm chart
+- task: kasunkodagoda.regex-match-replace.regex-match-replace.RegExMatchReplace@2
+  displayName: 'Update node count'
+  inputs:
+    PathToFile: 'charts/mole-cloud/values.yaml'
+    RegEx: 'repository:[.]*'
+    ValueToReplace: 'replicas: $(pod_replica_count)'
+
+# Update image repository in helm chart
+- task: kasunkodagoda.regex-match-replace.regex-match-replace.RegExMatchReplace@2
+  displayName: 'Update image repository'
+  inputs:
+    PathToFile: 'charts/mole-cloud/values.yaml'
+    RegEx: 'replicas:[\s]+([\d]+)'
+    ValueToReplace: 'repository: $(repository)'
+
+# Update image tag in helm chart
+- task: kasunkodagoda.regex-match-replace.regex-match-replace.RegExMatchReplace@2
+  displayName: 'Update image tag'
+  inputs:
+    PathToFile: 'charts/mole-cloud/values.yaml'
+    RegEx: 'tag:[.*]'
+    ValueToReplace: 'tag: $(Build.BuildNumber)'
+
+# Build, package and push
 - task: AzureCLI@1
   displayName: 'Azure CLI '
   inputs:
@@ -33,7 +59,7 @@ steps:
 
       # User ACR to build and tag our container
       curl -d "{\"State\": 1, \"Message\": \"Executing Azure Container Registry Build...\", \"ServiceName\": \"mtcden\"}" -X POST $(report_url)
-      az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.MoleCloud --build-arg "pod_color=$(pod_color)" ./src
+      az acr build -r $(acr_name) -t $(repository):$(tag) -f ./src/Dockerfile.MoleCloud --build-arg "pod_color=$(pod_color)" ./src
       
       # Package the helm chart and push it to ACR
       curl -d "{\"State\": 2, \"Message\": \"Initializing Helm...\", \"ServiceName\": \"mtcden\"}" -X POST $(report_url)
