--- a/azure-pipelines.mole-cloud.yml
+++ b/azure-pipelines.mole-cloud.yml
@@ -47,7 +47,7 @@ steps:
   inputs:
     PathToFile: 'charts/mole-cloud/values.yaml'
     RegEx: 'tag:.*'
-    ValueToReplace: 'tag: $(Build.BuildNumber)'
+    ValueToReplace: 'tag: "$(Build.BuildNumber)"'
 
 # Build, package and push
 - task: AzureCLI@1
